Fixed the issue mentioned in 0f16e9e regarding horizontal scroll on about page

--- a/wp/wp-content/themes/FoundationPress-child/css/staff.css
+++ b/wp/wp-content/themes/FoundationPress-child/css/staff.css
@@ -1,3 +1,10 @@
+.row .crewList .row {
+    margin: 0;
+}
+.crewList .columns {
+    padding-left: 0;
+    padding-right: 0;
+}
 .category-staff {
     margin-bottom: 0;    
 }
@@ -8,8 +15,8 @@
     color: #222;
     font-size: 1.1rem;
     float: right;
-    width: auto!important;
-    height: auto!important;
+    width: auto !important;
+    height: auto !important;
 }
 .reviewAnchor.icon.comments:before{
     padding-right: 5px;
@@ -21,8 +28,8 @@
     background-size: cover;
     background-position: center;
 }
-.crewList .text {
-    padding: 30px 45px 22px 45px;
+.crewList .columns .text {
+    padding: 30px 30px 22px 30px;
 }
 .crewList .text dl:last-of-type {
     margin-bottom: 0;
